--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">AJ Dev Team is a creative team that develops AJ's websites.</h3>
+          <p class="text-muted">AJ Dev TeamはAJの開発チームです。<br>主に <i><a href="aiesec.jp">aiesec.jp</a></i>
+            の開発を担当する独立部隊です。<br>そのうちかっこいいチーム名を考えます。<br><br>メンバー募集しているので、ウェブ技術に興味のある方、<br>プログラミングができるようになりたい方は連絡お待ちしてます。<br>
+          </p>
         </div>
       </div>
     </div>
@@ -168,7 +170,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">We're hiring!</p>
+          <p class="section-subheading text-muted">We're hiring!</p>
         </div>
       </div>
     </div>
@@ -180,7 +182,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">SKILLS</h2>
-          <h3 class="section-subheading text-muted">Powerful technologies and tools that we use.</h3>
+          <p class="text-muted">AJ Dev Teamではこんな技術を使います。<br>Vue.js+ContentfulでJAMstackなサイトを開発します。<br>　<br>　</p>
         </div>
       </div>
       <div class="row text-center">
