--- a/index.html
+++ b/index.html
@@ -212,18 +212,21 @@
             <img src="img/skills/vuejs-original.svg">
           </span>
           <h4 class="service-heading">Vue.js</h4>
+          <p class="text-muted">　</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img src="img/skills/contentful.png">
           </span>
           <h4 class="service-heading">Contentful</h4>
+          <p class="text-muted">　</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img src="img/skills/git-original.svg">
           </span>
           <h4 class="service-heading">Git</h4>
+          <p class="text-muted">　</p>
         </div>
       </div>
     </div>
