--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#page-top">TOP</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
@@ -50,10 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#recruit">Recruit</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To AJ Dev Team!</div>
         <div class="intro-heading text-uppercase">Hacking Growth</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
       </div>
     </div>
   </header>
@@ -78,7 +78,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
           <p class="text-muted">AJ Dev TeamはAJの開発チームです。<br>主に <i><a href="aiesec.jp">aiesec.jp</a></i>
-            の開発を担当する独立部隊です。<br>そのうちかっこいいチーム名を考えます。<br><br>メンバー募集しているので、ウェブ技術に興味のある方、<br>プログラミングができるようになりたい方は連絡お待ちしてます。<br>
+            の開発を担当する技術部隊です。<br>そのうちかっこいいチーム名を考えます。<br><br>メンバー募集しているので、ウェブ技術に興味のある方、<br>プログラミングができるようになりたい方は連絡お待ちしてます。<br>
           </p>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/hiyoko.png" alt="andmohiko">
             <h4>Tomohiko Ito</h4>
-            <p class="text-muted">Lead Tech/Developer</p>
+            <p class="text-muted">Tech Lead/Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/andmohiko">
@@ -260,112 +260,25 @@
     </div>
   </section> -->
 
-  <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
+  <!-- Recruit -->
+  <section class="bg-light page-section" id="recruit">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Coming Soon.</h3>
-        </div>
-      </div>
-      <!--       
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
-          </div>
-        </div> -->
-    </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="page-section" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Join Us</h2>
-          <h3 class="section-subheading text-muted">We're hiring!</h3>
+          <h2 class="section-heading text-uppercase">Recruitment</h2>
+          <h3 class="text-muted"><i>We're hiring!</i></h3>
+          <p>
+            ウェブ技術に興味のある方、プログラミングを学びたい方、<br>
+            俺ならもっとイケてるサイト作れるぜ！という方<br>
+            AJ Dev Teamに参加しませんか？<br>
+            Twitterかメールで連絡お待ちしてます。<br>
+            <br>
+            学べる技術: html, css, javascript, vue.js, nuxt.js, git, etc..<br>
+            <br>
+            <h3 class="text-muted">Contact</h3>
+            Email: tomohiko.ito@aiesec.jp<br>
+            Twitter: @andmohiko<br>
+          </p>
         </div>
       </div>
     </div>
