--- a/index.html
+++ b/index.html
@@ -77,8 +77,23 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <p class="text-muted">AJ Dev TeamはAJの開発チームです。<br>主に <i><a href="aiesec.jp">aiesec.jp</a></i>
-            の開発を担当する技術部隊です。<br>そのうちかっこいいチーム名を考えます。<br><br>メンバー募集しているので、ウェブ技術に興味のある方、<br>プログラミングができるようになりたい方は連絡お待ちしてます。<br>
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <img class="ajxtech" src="img/about/ajxtech.png" alt="aiesec_x_tech">
+            </div>
+          </div>
+          <p class="text-muted">
+            AJ Dev TeamはAJの開発チームです。<br>
+            テクノロジーでP&Fを目指します。<br>
+            主に <a href="aiesec.jp">aiesec.jp</a> の開発を担当する技術部隊です。<br>
+            そのうちかっこいいチーム名を考えます。<br>
+            <br>
+            <i>「未来を予測する最善の方法は、それを発明することだ」 - アラン・ケイ</i><br>
+            <br>
+            どんなに崇高な理念を掲げても、思想だけでは世界は変えられません。<br>
+            未来を創り出すには実装力が必要です。<br>
+            AJ Dev Teamはテクノロジーを武器に世界に立ち向かいます。<br>
+            世界を変えられるだけの技術力がほしい方、AJ Dev Teamで未来を実装しましょう。<br>
           </p>
         </div>
       </div>
@@ -231,34 +246,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Clients -->
-  <!-- <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- Recruit -->
   <section class="bg-light page-section" id="recruit">
