--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             AJ Dev Teamに参加しませんか？<br>
             Twitterかメールで連絡お待ちしてます。<br>
             <br>
-            学べる技術: html, css, javascript, vue.js, nuxt.js, git, etc..<br>
+            身につく技術: html, css, javascript, vue.js, nuxt.js, git, etc..<br>
             <br>
             <h3 class="text-muted">Contact</h3>
             Email: tomohiko.ito@aiesec.jp<br>
