--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To AJ Dev Team!</div>
-        <div class="intro-heading text-uppercase">Hacking Growth</div>
+        <div class="intro-heading text-uppercase">
+          Implement<br>
+          Incremental<br>
+          Ideal
+        </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
       </div>
     </div>
@@ -83,17 +87,18 @@
             </div>
           </div>
           <p class="text-muted">
-            AJ Dev TeamはAJの開発チームです。<br>
-            テクノロジーでP&Fを目指します。<br>
-            主に <a href="aiesec.jp">aiesec.jp</a> の開発を担当する技術部隊です。<br>
-            そのうちかっこいいチーム名を考えます。<br>
+            III(トリプルアイ)はAJの開発チームです。<br>
             <br>
             <i>「未来を予測する最善の方法は、それを発明することだ」 - アラン・ケイ</i><br>
             <br>
             どんなに崇高な理念を掲げても、思想だけでは世界は変えられません。<br>
             未来を創り出すには実装力が必要です。<br>
-            AJ Dev Teamはテクノロジーを武器に世界に立ち向かいます。<br>
-            世界を変えられるだけの技術力がほしい方、AJ Dev Teamで未来を実装しましょう。<br>
+            <br>
+            IIIはImplement Incremental Idealの略です。<br>
+            一歩ずつ理想を実装します。<br>
+            <br>
+            IIIはテクノロジーによってP&Fを目指します。<br>
+            世界を変えられるだけの技術力がほしい方、IIIで未来を実装しましょう。<br>
           </p>
         </div>
       </div>
@@ -197,7 +202,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">SKILLS</h2>
-          <p class="text-muted">AJ Dev Teamではこんな技術を使います。<br>Vue.js+ContentfulでJAMstackなサイトを開発します。<br>　<br>　</p>
+          <p class="text-muted">IIIではこんな技術を使います。<br>Vue.js+ContentfulでJAMstackなサイトを開発します。<br>　<br>　</p>
         </div>
       </div>
       <div class="row text-center">
@@ -255,9 +260,10 @@
           <h2 class="section-heading text-uppercase">Recruitment</h2>
           <h3 class="text-muted"><i>We're hiring!</i></h3>
           <p>
+            IIIは <a href="aiesec.jp">aiesec.jp</a> の開発を担当する技術部隊です。<br>
             ウェブ技術に興味のある方、プログラミングを学びたい方、<br>
-            俺ならもっとイケてるサイト作れるぜ！という方<br>
-            AJ Dev Teamに参加しませんか？<br>
+            俺ならもっとイケてるサイト作れるぜ！という方、<br>
+            IIIはメンバーを募集してます。<br>
             Twitterかメールで連絡お待ちしてます。<br>
             <br>
             身につく技術: html, css, javascript, vue.js, nuxt.js, git, etc..<br>
