--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
             <i>「未来を予測する最善の方法は、それを発明することだ」 - アラン・ケイ</i><br>
             <br>
             どんなに崇高な理念を掲げても、思想だけでは世界は変えられません。<br>
-            未来を創り出すには実装力が必要です。<br>
+            未来を創り出す<strong>実装力</strong>が伴わなければなりません。<br>
             <br>
             IIIはImplement Incremental Idealの略です。<br>
-            一歩ずつ理想を実装します。<br>
+            一歩ずつ理想を実装していきます。<br>
             <br>
             IIIはテクノロジーによってP&Fを目指します。<br>
-            世界を変えられるだけの技術力がほしい方、IIIで未来を実装しましょう。<br>
+            世界を変えられるだけの技術力がほしい方、<br>
+            IIIで<strong>未来を実装</strong>しましょう。<br>
           </p>
         </div>
       </div>
