add iii logo in about section

--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
             <br>
             どんなに崇高な理念を掲げても、思想だけでは世界は変えられません。<br>
             未来を創り出す<strong>実装力</strong>が伴わなければなりません。<br>
-            <br>
+          </p>
+          <img class="iii-logo" src="img/logos/III.png" alt="iii">
+          <p>
             IIIはImplement Incremental Idealの略です。<br>
-            一歩ずつ理想を実装していきます。<br>
+            理想を掲げ<br>
+            実装することで<br>
+            現実を前に進めます。<br>
             <br>
             IIIはテクノロジーによってP&Fを目指します。<br>
             世界を変えられるだけの技術力がほしい方、<br>
