fix about p tag text muted

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             未来を創り出す<strong>実装力</strong>が伴わなければなりません。<br>
           </p>
           <img class="iii-logo" src="img/logos/III.png" alt="iii">
-          <p>
+          <p class="text-muted">
             IIIはImplement Incremental Idealの略です。<br>
             理想を掲げ<br>
             実装することで<br>
