--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img src="img/skills/contentful.png" alt="contentful">
+            <img src="img/skills/bootstrap-plain.svg" alt="bootstrap">
           </span>
-          <h4 class="service-heading">Contentful</h4>
+          <h4 class="service-heading">Bootstrap</h4>
           <p class="text-muted">　</p>
         </div>
         <div class="col-md-4">
