update about, member, recruitment text

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="intro-lead-in">Welcome To AJ Dev Team!</div>
         <div class="intro-heading text-uppercase">
           Implement<br>
-          Incremental<br>
-          Ideal
+          Ideal<br>
+          Incrementaly
         </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
       </div>
@@ -97,14 +97,13 @@
           </p>
           <img class="iii-logo" src="img/logos/III.png" alt="iii">
           <p class="text-muted">
-            IIIはImplement Incremental Idealの略です。<br>
-            理想を掲げ<br>
+            IIIはImplement Ideal Incrementalyの略です。<br>
+            掲げた理想を<br>
             実装することで<br>
             現実を前に進めます。<br>
             <br>
             IIIはテクノロジーによってP&Fを目指します。<br>
-            世界を変えられるだけの技術力がほしい方、<br>
-            IIIで<strong>未来を実装</strong>しましょう。<br>
+            技術でAJを創っていくことに興味がある方、AJ開発チームに参加しませんか？
           </p>
         </div>
       </div>
@@ -149,13 +148,37 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/pakkushon_glitch.png" alt="pakkushon">
             <h4>Chieko Hakuto</h4>
-            <p class="text-muted">Director</p>
+            <p class="text-muted">Director & Designer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/pakkushon">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
+              <!-- <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li> -->
+              <!-- <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/questionmark.png" alt="questionmark">
+            <h4>Next is you!</h4>
+            <p class="text-muted">Developer</p>
+            <ul class="list-inline social-buttons">
+              <!-- <li class="list-inline-item">
+                <a href="https://twitter.com/pakkushon">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li> -->
               <!-- <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-facebook-f"></i>
@@ -272,7 +295,7 @@
             IIIはメンバーを募集してます。<br>
             Twitterかメールで連絡お待ちしてます。<br>
             <br>
-            身につく技術: html, css, javascript, vue.js, nuxt.js, git, etc..<br>
+            身につく技術: html, css, javascript, Sass, Vue.js, git, etc..<br>
             <br>
             <h3 class="text-muted">Contact</h3>
             Email: tomohiko.ito@aiesec.jp<br>
