update team name

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="intro-heading text-uppercase">
           Implement<br>
           Ideal<br>
-          Incrementaly
+          Increment++
         </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Tell Me More</a>
       </div>
@@ -97,7 +97,7 @@
           </p>
           <img class="iii-logo" src="img/logos/III.png" alt="iii">
           <p class="text-muted">
-            IIIはImplement Ideal Incrementalyの略です。<br>
+            IIIはImplement Ideal Increment++の略です。<br>
             掲げた理想を<br>
             実装することで<br>
             現実を前に進めます。<br>
